# Ledger.Lift

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  BUGFIX_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENV_SETUP_GUIDE.md  GITIGNORE_RECOMMENDATIONS.md  LICENSE  Makefile  PRODUCTION_SETUP.md  PR_HARDENING_PHASE1.md  PULL_REQUEST.md  PULL_REQUEST_BODY.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  RELIABILITY_PLAYBOOK.md  RELIABILITY_TESTING_PLAYBOOK.md  SECURITY.md  T3_README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  env.example  netlify.toml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  netlify-preview.yml  reliability-ci.yml
apps/api/: .env.example  Dockerfile  alembic.ini  config.py  metrics.py  pyproject.toml  test.db
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_migration.py  001_initial_schema.py
apps/api/app/: aws.py  config_t3.py  db.py  db_migration.md  jobs.py  main.py  metrics.py  middleware.py  models.py  progress.py  rate_limit.py  scheduler.py  services.py  settings.py  telemetry.py
apps/api/app/exporter/: __init__.py  xlsx.py
apps/api/app/middleware/: error.py  ratelimit.py  tracing.py
apps/api/app/models/: __init__.py  audit.py  costs.py  schedules.py
apps/api/app/routes/: artifacts.py  documents.py  health.py  jobs_events.py  ops.py  processing.py  schedules.py  uploads.py
apps/api/app/services/: audit.py  costs.py  gdpr.py
apps/api/infra/: redis.py
apps/api/ledger_lift_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20240905_add_document_hash_columns.py  9db8c0e41e1f_initial_schema.py  add_performance_indexes.py  t3_001_audit_costs_schedules.py
apps/api/services/: progress_pubsub.py
apps/api/tests/: test_aws_hardened.py  test_db_hardened.py  test_health.py  test_integration.py  test_ops.py  test_queue.py  test_routes_enhanced.py  test_sse.py  test_uploads_hardened.py
apps/web/: next.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  trace  (+8 more)
apps/worker/: .env.example  Dockerfile  config.py  metrics.py  metrics_server.py  pyproject.toml  queues.py  server.py
apps/worker/financial/: __init__.py  detector.py  validators.py
apps/worker/infra/: redis.py
apps/worker/ocr/: __init__.py  aws_textract.py  azure_layout.py  rate_limit.py  select.py  tesseract_local.py
apps/worker/services/: __init__.py  cas.py  cas_phash.py
apps/worker/tests/: test_cas.py  test_cas_phash.py  test_cli.py  test_detector.py  test_metrics_server.py  test_ocr_limits.py  test_ocr_select.py  test_queue.py  test_timeout_cross_platform.py  test_validators.py  test_worker_enhanced.py
apps/worker/tests/fixtures/: financial_tables.json
apps/worker/worker/: aws.py  aws_client.py  cancellation.py  celery_cli.py  cli.py  costs.py  database.py  jobs.py  metrics_server.py  models.py  ocr.py  processor.py  rq_jobs.py  services.py  settings.py  tasks.py  telemetry.py
apps/worker/worker/pipeline/: extract.py  ocr.py  render.py
docs/: architecture.md  ops.md
docs/deploy/: netlify.md
infra/terraform/: README.md  main.tf
monitoring/: prometheus.yml
netlify/functions/: _database.ts  _storage.ts  _utils.ts  complete-multipart.ts  delete-job.ts  export-job.ts  get-audit-trail.ts  get-job-schedules.ts  get-job-status.ts  healthz.ts  ingest-pdf.ts  initiate-upload.ts  package.json  parse-and-extract-background.ts
scripts/: check_reliability_patterns.py  test_cross_platform_timeout.py  test_timeout_standalone.py
src/config/: env.ts
tests/: client-upload-utils.test.ts  conftest.py  cors.test.ts  env.test.ts  etag-normalization.test.ts  helpers.ts  initiate-upload.test.ts  multipart-limits.test.ts  multipart.integration.test.ts  storage.test.ts  test_audit.py  test_costs.py  test_deletion.py
tests/fixtures/: make_fixtures.py
tests/integration/: pdf-to-excel.spec.ts  test_t3_workflow.py
tests/unit/: excel.spec.ts  ocr.spec.ts  tables.spec.ts
types/: aws-sdk.d.ts
(+84 files in other folders)
