[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-lift-api"
version = "0.1.0"
description = "FastAPI backend for Ledger Lift"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.0",
  "pydantic-settings==2.4.0",
  "SQLAlchemy==2.0.32",
  "psycopg[binary]==3.2.3",
  "boto3==1.34.131",
  "alembic==1.13.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "httpx==0.27.0",
  "ruff==0.6.2"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["E", "F", "I"]
