[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-lift-api"
version = "0.1.0"
description = "FastAPI backend for Ledger Lift"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.0",
  "pydantic-settings==2.4.0",
  "SQLAlchemy==2.0.32",
  "psycopg[binary]==3.2.3",
  "boto3==1.34.131",
  "alembic==1.13.1",
  "psutil==6.0.0",
  "pandas==2.2.0",
  "openpyxl==3.1.2",
  "slowapi==0.1.9",
  "prometheus-client==0.20.0",
  "redis==5.0.1",
  "rq==1.15.1",
  "opentelemetry-api==1.21.0",
  "opentelemetry-sdk==1.21.0",
  "opentelemetry-instrumentation-fastapi==0.42b0",
  "opentelemetry-instrumentation-sqlalchemy==0.42b0",
  "opentelemetry-exporter-prometheus==1.12.0rc1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "httpx==0.27.0",
  "ruff==0.6.2"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["E", "F", "I"]
