[project]
name = "ledger-lift-worker"
version = "0.1.0"
description = "Worker CLI for document rendering and extraction"
requires-python = ">=3.11"
dependencies = [
  "typer==0.12.5",
  "rich==13.7.1",
  "PyMuPDF==1.24.3",
  "pytesseract==0.3.10",
  "opencv-python-headless==4.8.1.78",
  "requests==2.31.0",
  "opentelemetry-distro==0.45b0",
  "opentelemetry-exporter-otlp==1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "ruff==0.6.2"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["E", "F", "I"]
