[project]
name = "ledger-lift-worker"
version = "0.1.0"
description = "Worker CLI for document rendering and extraction"
requires-python = ">=3.11"
dependencies = [
  "typer==0.12.5",
  "rich==13.7.1",
  "PyMuPDF==1.24.3",
  "SQLAlchemy==2.0.32",
  "psycopg[binary]==3.2.3",
  "boto3==1.34.131",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "ruff==0.6.2"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["E", "F", "I"]
