[project]
name = "ledger-lift-worker"
version = "0.1.0"
description = "Worker CLI for document rendering and extraction"
requires-python = ">=3.11"
dependencies = [
  "typer==0.12.5",
  "rich==13.7.1",
  "PyMuPDF==1.24.3",
  "SQLAlchemy==2.0.32",
  "psycopg[binary]==3.2.3",
  "boto3==1.34.131",
  "camelot-py[cv]==0.10.1",
  "pdfplumber==0.10.3",
  "pandas==2.2.0",
  "opencv-python==4.9.0.80",
  "ghostscript==0.7",
  "redis==5.0.1",
  "rq==1.16.1",
  "prometheus-client==0.20.0",
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "ruff==0.6.2",
  "fakeredis==2.23.2"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["E", "F", "I"]
